<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RegisterFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/reg_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poor_story"
        android:padding="20dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_email_input_layout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration"
        app:layout_constraintTop_toBottomOf="@id/reg_text_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_password_input_layout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration"
        app:layout_constraintTop_toBottomOf="@id/reg_email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_confirm_password_input_layout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration"
        app:layout_constraintTop_toBottomOf="@id/reg_password_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_confirm_password_input_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_registration"
        android:text="@string/have_account"
        android:textColor="@color/hyperlink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_button" />

</androidx.constraintlayout.widget.ConstraintLayout>