<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="24dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_28"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--  Different implementation of round cornered rectangle image on pre and post api v31  -->
            <include
                android:id="@+id/image_app_logo"
                layout="@layout/round_corner_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                app:layout_constraintEnd_toStartOf="@id/textview_app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/sample_version_value"
                app:layout_constraintBottom_toBottomOf="@id/image_app_logo"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_dev_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:layout_marginStart="24dp"
                android:text="@string/developer_name"
                android:textSize="@dimen/text_size_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_app_logo" />

            <ImageView
                android:id="@+id/logo_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/mail"
                android:src="@drawable/ic_mail_24"
                app:layout_constraintStart_toEndOf="@id/text_dev_name"
                app:layout_constraintTop_toTopOf="@id/text_dev_name" />

            <ImageView
                android:id="@+id/logo_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/github"
                android:src="@drawable/ic_github_24"
                app:layout_constraintStart_toEndOf="@id/logo_mail"
                app:layout_constraintTop_toTopOf="@id/text_dev_name" />

            <ImageView
                android:id="@+id/logo_linkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:contentDescription="@string/linkedin"
                android:src="@drawable/ic_linkedin_24"
                app:layout_constraintStart_toEndOf="@id/logo_github"
                app:layout_constraintTop_toTopOf="@id/text_dev_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>