<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/login_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poor_story"
        android:padding="20dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input_layout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration"
        app:layout_constraintTop_toBottomOf="@id/login_text_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input_layout"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration"
        app:layout_constraintTop_toBottomOf="@id/login_email_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_registration"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_input_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_registration"
        android:text="@string/forgot_password"
        android:textColor="@color/hyperlink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_google_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_registration"
        android:backgroundTint="@color/google_background"
        android:fontFamily="monospace"
        android:text="@string/login_with_google"
        android:textColor="@color/google_text"
        android:textSize="11sp"
        app:icon="@drawable/google_icon"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>